@@ -184,7 +184,13 @@ while($file = readdir($dir)){
             $dirCounter++;
         }
     } else {
-        $filename[] = $file;
+        if (is_array($hiddenfolders)) {
+			if (in_array($file,$hiddenfolders) == false) {
+				$filename[] = $file;
+			}
+		} else {
+			$filename[] = $file;
+		}
     }
 }
 closedir($dir);
@@ -219,7 +225,7 @@ if ($linktarget != '') {
         } // end foreach
     } // end is_array
     if ($allowed_file_counter!=0) {
-        echo '<a href="'.$linktarget.'?startdir='.rtrim(str_replace($limitfolder, '',$folder), $folder_sep).'" class="admin_menu" target="_parent">'.$lang_common['ok'].'</a>' . $newline;
+        echo '<a href="'.$linktarget.'?startdir='.rtrim(str_replace($limitfolder, '',$folder), $folder_sep).'" class="admin_menu" target="_parent">'.cpg_fetch_icon('ok', 2) . $lang_common['ok'].'</a>' . $newline;
     } // determine if we should display a submit button - END BLOCK
 } else {
     echo '<input type="submit" name="submit" value="'.$lang_common['ok'].'" class="button" />' . $newline;
